# simdoc

./: .gitmodules  CMakeLists.txt  README.md
examples/: output.json
src/: data-source.cc  data-source.hh  document-frequency.cc  document-frequency.hh  files-list.cc  files-list.hh  filesystem.cc  filesystem.hh  frequency-table.cc  frequency-table.hh  main.cc  result-document.cc  result-document.hh  scoped-timer.hh  text-processor.cc  text-processor.hh  tf-idf.cc  tf-idf.hh  timer.hh  word-cache.cc  word-cache.hh
src/tfidf/: data-source.hh  document-frequency.cc  document-frequency.hh  frequency-table.cc  frequency-table.hh  main.cc  result-document.cc  tf-idf.cc  tf-idf.hh
